# audio-streamer-xiao

./: .gitignore  1partitions.csv  ACTION_PLAN.md  ADVANCED_FEATURES.md  BUILD_FIX_SUMMARY.md  CAPTIVE_PORTAL_FIX.md  CLAUDE.md  CMakeLists.txt  CODE_QUALITY_FIXES.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PRIORITIES.md  IMPLEMENTATION_SUMMARY.md  PARTITION_TABLE.md  PR5-ACTION-PLAN.md  PUSH_GUIDE.md  QUICK_REFERENCE.md  README.md  README_PLANNING.md  REVIEW_SUMMARY.md  SECURITY.md  TODO.md  WEB_UI_IMPLEMENTATION.md  add_auth_properly.py  add_auth_to_handlers.py  build.bat  build.sh  create_combined_firmware.bat  disable_component_manager.py  embed_data_files.py  enable_component_manager.py  improvement_plan.md  kimi.ps1  partitions_8mb_optimized.csv  partitions_custom.csv  plan.md  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.old  (+1 more)
.github/: copilot-instructions.md
claudedocs/: ANALYSIS_REPORT.md  PSRAM_FIX.md
data/: config.html  index.html  logs.html  monitor.html  network.html  ota.html
data/css/: style.css
data/js/: api.js  app.js  config.js  logs.js  monitor.js  network.js  ota.js  utils.js
scripts/: set_rom_elf_dir.py
src/: CMakeLists.txt  config.h  idf_component.yml  main.cpp
src/modules/: buffer_manager.cpp  buffer_manager.h  buffer_manager_secure.cpp  buffer_manager_secure.h  captive_portal.cpp  captive_portal.h  config_manager.cpp  config_manager.h  config_manager_v2.cpp  config_manager_v2.h  config_schema.cpp  config_schema.h  error_handler.cpp  error_handler.h  i2s_handler.cpp  i2s_handler.h  i2s_handler_secure.cpp  i2s_handler_secure.h  json_validator.h  lockfree_ringbuffer.cpp  lockfree_ringbuffer.h  log_manager.cpp  log_manager.h  network_diagnostics.cpp  network_diagnostics.h  network_manager.cpp  network_manager.h  ota_handler.cpp  ota_handler.h  performance_monitor.cpp  performance_monitor.h  secure_credential_manager.cpp  secure_credential_manager.h  structured_log.h  tcp_streamer.cpp  tcp_streamer.h  tls_manager.cpp  tls_manager.h  udp_streamer.cpp  udp_streamer.h  (+7 more)
src/tests/: test_security.c
